--- a/requirements.txt
+++ b/requirements.txt
@@ -113,7 +113,7 @@ pydot-ng==1.0.0
 pyflakes==1.3.0
 Pygments==2.1.3
 pylint==1.5.4
-pyOpenSSL==16.2.0
+pyOpenSSL>=17.5.0
 pyopt==0.84
 pyparsing==2.2.0
 pytest==2.9.2
