--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,6 @@ et-xmlfile==1.0.1
 eventlet==0.20.1
 fastcache==1.0.2
 filelock==2.0.6
-Flask==0.11.1
-Flask-Cors==2.1.2
 gevent==1.1.2
 graphviz==0.6
 greenlet==0.4.10
@@ -80,7 +78,7 @@ nbpresent==3.0.2
 networkx==1.11
 nltk==3.2.1
 nose==1.3.7
-notebook==4.2.3
+notebook>=5.4.1
 numba==0.28.1
 numexpr==2.6.2
 numpy==1.12.1
@@ -107,7 +105,7 @@ py==1.4.31
 pyasn1==0.1.9
 pycosat==0.6.1
 pycparser==2.14
-pycrypto==2.6.1
+pycrypto>=2.6.1
 pycurl==7.43.0
 pydot-ng==1.0.0
 pyflakes==1.3.0
