--- a/requirements.txt
+++ b/requirements.txt
@@ -1,152 +1,199 @@
-alabaster==0.7.9
-anaconda-clean==1.0
-anaconda-client==1.5.1
-anaconda-navigator==1.3.1
-argcomplete==1.0.0
-astroid==1.4.7
-Babel==2.3.4
-backports.shutil-get-terminal-size==1.0.0
-bitarray==0.8.1
-blaze==0.10.1
-Bottleneck==1.1.0
-cffi==1.7.0
-chest==0.2.3
-click==6.6
-cloudpickle==0.2.1
-clyent==1.2.2
-colorama==0.3.7
-conda==4.3.13
-conda-build==2.0.2
+alabaster==0.7.12
+appdirs==1.4.3
+appnope==0.1.0
+arrow==0.15.4
+astroid==2.3.3
+attrs==19.3.0
+aws-shell==0.2.1
+awscli==1.16.306
+Babel==2.7.0
+backcall==0.1.0
+backports-abc==0.5
+backports.functools-lru-cache==1.6.1
+backports.ssl-match-hostname==3.7.0.1
+bcdoc==0.16.0
+beautifulsoup4==4.8.1
+binaryornot==0.4.4
+bleach==3.1.0
+boto==2.49.0
+boto3==1.10.42
+botocore==1.13.42
+brewer2mpl==1.4.1
+bs4==0.0.1
+bumpversion==0.5.3
+cachetools==3.1.1
+carto==1.8.2
+cartoframes==1.0b7
+certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+click-plugins==1.1.1
+cligj==0.5.0
+colorama==0.4.3
 configobj==5.0.6
-contextlib2==0.5.3
-cryptography==1.5
+cookiecutter==1.6.0
+cryptography==2.8
 cycler==0.10.0
-Cython==0.24.1
-cytoolz==0.8.0
-dask==0.11.0
-datashape==0.5.2
-decorator==4.0.10
-dill==0.2.5
+Cython==0.29.14
+decorator==4.4.1
+defusedxml==0.6.0
+descartes==1.1.0
 docopt==0.6.2
-docutils==0.12
-dynd==0.7.3.dev1
-enum-compat==0.0.2
-et-xmlfile==1.0.1
-eventlet==0.20.1
-fastcache==1.0.2
-filelock==2.0.6
-gevent==1.1.2
-graphviz==0.6
-greenlet==0.4.10
-h5py==2.6.0
-HeapDict==1.0.0
-idna==2.1
-imagesize==0.7.1
-ipykernel==4.5.0
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
-itsdangerous==0.24
-jdcal==1.2
-jedi==0.9.0
-Jinja2==2.8
-jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-contrib-core==0.3.0
-jupyter-contrib-nbextensions==0.2.4
-jupyter-core==4.2.0
-jupyter-highlight-selected-word==0.0.7
-jupyter-latex-envs==1.3.7.1
-jupyter-nbextensions-configurator==0.2.3
-lazy-object-proxy==1.2.1
-llvmlite==0.13.0
-locket==0.2.0
-lxml==3.6.4
-MarkupSafe==0.23
-matplotlib==1.5.3
-mistune==0.7.3
-mpmath==0.19
-multipledispatch==0.4.8
-nb-anacondacloud==1.2.0
-nb-conda==2.0.0
-nb-conda-kernels==2.0.0
-nbconvert==4.2.0
-nbformat==4.1.0
-nbpresent==3.0.2
-networkx==1.11
-nltk==3.2.1
-nose==1.3.7
-notebook>=5.4.1
-numba==0.28.1
-numexpr==2.6.2
-numpy==1.12.1
-odo==0.5.0
-olefile==0.44
-openpyxl==2.3.2
-pandas==0.18.1
-partd==0.3.6
-path.py==0.0.0
-pathlib2==2.1.0
-patsy==0.4.1
-pep8==1.7.0
-pexpect==4.0.1
-pickleshare==0.7.4
-Pillow==4.0.0
-pipreqs==0.4.6
-pkginfo==1.3.2
-ply==3.9
-prompt-toolkit==1.0.3
-protobuf==3.2.0
-psutil==4.3.1
-ptyprocess==0.5.1
-py==1.4.31
-pyasn1==0.1.9
-pycosat==0.6.1
-pycparser==2.14
-pycrypto>=2.6.1
-pycurl==7.43.0
-pydot-ng==1.0.0
-pyflakes==1.3.0
-Pygments==2.1.3
-pylint==1.5.4
-pyOpenSSL>=17.5.0
-pyopt==0.84
-pyparsing==2.2.0
-pytest==2.9.2
-python-dateutil==2.5.3
-python-engineio==1.3.1
-python-socketio==1.7.3
-pytz==2016.6.1
-PyYAML==3.12
-pyzmq==15.4.0
-QtAwesome==0.3.3
-qtconsole==4.2.1
-QtPy==1.1.2
-requests==2.13.0
-rope-py3k==0.9.4.post1
-ruamel-yaml===-VERSION
-scipy==0.19.0
+docutils==0.15.2
+dparse==0.4.1
+entrypoints==0.3
+enum34==1.1.6
+Faker==3.0.0
+fastavro==0.22.8
+feedparser==5.2.1
+Fiona==1.8.13
+future==0.18.2
+genson==1.1.0
+geojson==2.5.0
+geopandas==0.6.2
+gevent==1.4.0
+ggplot==0.11.5
+gitsome==0.8.4
+google-api-core==1.15.0
+google-auth==1.9.0
+google-cloud-bigquery==1.23.1
+google-cloud-bigquery-storage==0.7.0
+google-cloud-core==1.1.0
+google-cloud-storage==1.23.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.6.0
+googlemaps==3.1.4
+greenlet==0.4.15
+grpcio==1.26.0
+h5py==2.10.0
+html5lib==1.0.1
+idna==2.8
+imagesize==1.1.0
+importlib-metadata==1.3.0
+importlib-resources==1.0.2
+ipykernel==5.1.3
+ipython==7.10.2
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+jedi==0.15.1
+Jinja2==2.10.3
+jinja2-time==0.2.0
+jmespath==0.9.4
+json5==0.8.5
+jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.6.1
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab==2.0.0a4
+jupyterlab-server==1.0.6
+jupyterthemes==0.20.0
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+lesscpy==0.13.0
+lxml==4.4.2
+MarkupSafe==1.1.1
+matplotlib==3.1.2
+mccabe==0.6.1
+mercantile==1.1.2
+mistune==0.8.4
+more-itertools==8.0.2
+multipledispatch==0.6.0
+munch==2.5.0
+nbconvert==5.6.1
+nbformat==4.4.0
+notebook==6.0.2
+numpy==1.18.0
+numpydoc==0.9.1
+packaging==19.2
+pandas==0.25.3
+pandocfilters==1.4.2
+parso==0.5.2
+patsy==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.1
+pipenv==2018.11.26
+pipreq==0.4
+pipreqs==0.4.10
+ply==3.11
+poyo==0.5.0
+prettytable==0.7.2
+prometheus-client==0.7.1
+prompt-toolkit==3.0.2
+protobuf==3.11.1
+psclient==2.0
+psutil==5.6.7
+ptyprocess==0.6.0
+pyarrow==0.15.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycparser==2.19
+pycrypto==2.6.1
+Pygments==2.5.2
+pylint==2.4.4
+pyparsing==2.4.5
+pyproj==2.4.2.post1
+pyrestcli==0.6.11
+pyrsistent==0.15.6
+python-dateutil==2.8.1
+pytz==2019.3
+PyYAML==5.2
+pyzmq==18.1.1
+qtconsole==4.6.0
+requests==2.22.0
+rsa==4.0
+s3transfer==0.2.1
+safety==1.8.5
+scipy==1.4.0
+seaborn==0.9.0
+Send2Trash==1.5.0
+Shapely==1.6.4.post2
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
-six==1.10.0
-sockjs-tornado==1.0.3
-statsmodels==0.6.1
-sympy==1.0
-tables==3.2.3.1
-terminado==0.6
-toolz==0.8.0
-tqdm==4.11.2
-traitlets==4.3.0
-unicodecsv==0.14.1
-watermark==1.3.4
+six==1.13.0
+snowballstemmer==2.0.0
+soupsieve==1.9.5
+Sphinx==2.3.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sseclient==0.0.24
+statsmodels==0.10.2
+tbb==2019.0
+terminado==0.8.3
+testpath==0.4.4
+text-unidecode==1.3
+Theano==1.0.4
+timezonefinder==4.2.0
+tornado==6.0.3
+tqdm==4.40.2
+traitlets==4.3.3
+typed-ast==1.4.0
+Unidecode==1.1.1
+uritemplate==3.0.0
+uritemplate.py==3.0.2
+urllib3==1.25.7
+virtualenv==16.7.9
+virtualenv-clone==0.5.3
+wakatime==13.0.3
 wcwidth==0.1.7
-websocket-client==0.40.0
-Werkzeug==0.11.11
-widgetsnbextension==1.2.6
-wrapt==1.10.6
-xlrd==1.0.0
-XlsxWriter==0.9.3
-xlwt==1.1.2
+webencodings==0.5.1
+whichcraft==0.6.1
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+yapf==0.29.0
 yarg==0.1.9
+zipp==0.6.0
